# RustSwiftFFI

./: Cargo.toml  LICENSE  README.md  build_xcframework.sh
src/: lib.rs
